--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -14,28 +14,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "movies = pd.read_csv('ml-latest-small/movies.csv')  # movieId title genres\n",
     "ratings = pd.read_csv('ml-latest-small/ratings.csv')  # userId movieId rating timestamp\n",
-    "ratings.drop(['timestamp'], axis=1, inplace=True)"
+    "ratings.drop(['timestamp'], axis=1, inplace=True)  # we don't care about timestap so lets get rid of it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -127,29 +129,360 @@
        "4                       Crime|Mystery|Thriller  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# lets further process our data set by merging our tables\n",
     "data = ratings.merge(movies, on='movieId', how='left')\n",
     "data.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can transform our data into a table where the rows reprsent the userId, and the columns represent the title. \n",
+    "We can then fill in missing values with 0 to then compute the correlation matrix."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>title</th>\n",
+       "      <th>'71 (2014)</th>\n",
+       "      <th>'Hellboy': The Seeds of Creation (2004)</th>\n",
+       "      <th>'Round Midnight (1986)</th>\n",
+       "      <th>'Salem's Lot (2004)</th>\n",
+       "      <th>'Til There Was You (1997)</th>\n",
+       "      <th>'Tis the Season for Love (2015)</th>\n",
+       "      <th>'burbs, The (1989)</th>\n",
+       "      <th>'night Mother (1986)</th>\n",
+       "      <th>(500) Days of Summer (2009)</th>\n",
+       "      <th>*batteries not included (1987)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Zulu (2013)</th>\n",
+       "      <th>[REC] (2007)</th>\n",
+       "      <th>[REC]² (2009)</th>\n",
+       "      <th>[REC]³ 3 Génesis (2012)</th>\n",
+       "      <th>anohana: The Flower We Saw That Day - The Movie (2013)</th>\n",
+       "      <th>eXistenZ (1999)</th>\n",
+       "      <th>xXx (2002)</th>\n",
+       "      <th>xXx: State of the Union (2005)</th>\n",
+       "      <th>¡Three Amigos! (1986)</th>\n",
+       "      <th>À nous la liberté (Freedom for Us) (1931)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>userId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 9719 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "title   '71 (2014)  'Hellboy': The Seeds of Creation (2004)  \\\n",
+       "userId                                                        \n",
+       "1              0.0                                      0.0   \n",
+       "2              0.0                                      0.0   \n",
+       "3              0.0                                      0.0   \n",
+       "4              0.0                                      0.0   \n",
+       "5              0.0                                      0.0   \n",
+       "\n",
+       "title   'Round Midnight (1986)  'Salem's Lot (2004)  \\\n",
+       "userId                                                \n",
+       "1                          0.0                  0.0   \n",
+       "2                          0.0                  0.0   \n",
+       "3                          0.0                  0.0   \n",
+       "4                          0.0                  0.0   \n",
+       "5                          0.0                  0.0   \n",
+       "\n",
+       "title   'Til There Was You (1997)  'Tis the Season for Love (2015)  \\\n",
+       "userId                                                               \n",
+       "1                             0.0                              0.0   \n",
+       "2                             0.0                              0.0   \n",
+       "3                             0.0                              0.0   \n",
+       "4                             0.0                              0.0   \n",
+       "5                             0.0                              0.0   \n",
+       "\n",
+       "title   'burbs, The (1989)  'night Mother (1986)  (500) Days of Summer (2009)  \\\n",
+       "userId                                                                          \n",
+       "1                      0.0                   0.0                          0.0   \n",
+       "2                      0.0                   0.0                          0.0   \n",
+       "3                      0.0                   0.0                          0.0   \n",
+       "4                      0.0                   0.0                          0.0   \n",
+       "5                      0.0                   0.0                          0.0   \n",
+       "\n",
+       "title   *batteries not included (1987)  ...  Zulu (2013)  [REC] (2007)  \\\n",
+       "userId                                  ...                              \n",
+       "1                                  0.0  ...          0.0           0.0   \n",
+       "2                                  0.0  ...          0.0           0.0   \n",
+       "3                                  0.0  ...          0.0           0.0   \n",
+       "4                                  0.0  ...          0.0           0.0   \n",
+       "5                                  0.0  ...          0.0           0.0   \n",
+       "\n",
+       "title   [REC]² (2009)  [REC]³ 3 Génesis (2012)  \\\n",
+       "userId                                           \n",
+       "1                 0.0                      0.0   \n",
+       "2                 0.0                      0.0   \n",
+       "3                 0.0                      0.0   \n",
+       "4                 0.0                      0.0   \n",
+       "5                 0.0                      0.0   \n",
+       "\n",
+       "title   anohana: The Flower We Saw That Day - The Movie (2013)  \\\n",
+       "userId                                                           \n",
+       "1                                                     0.0        \n",
+       "2                                                     0.0        \n",
+       "3                                                     0.0        \n",
+       "4                                                     0.0        \n",
+       "5                                                     0.0        \n",
+       "\n",
+       "title   eXistenZ (1999)  xXx (2002)  xXx: State of the Union (2005)  \\\n",
+       "userId                                                                \n",
+       "1                   0.0         0.0                             0.0   \n",
+       "2                   0.0         0.0                             0.0   \n",
+       "3                   0.0         0.0                             0.0   \n",
+       "4                   0.0         0.0                             0.0   \n",
+       "5                   0.0         0.0                             0.0   \n",
+       "\n",
+       "title   ¡Three Amigos! (1986)  À nous la liberté (Freedom for Us) (1931)  \n",
+       "userId                                                                    \n",
+       "1                         4.0                                        0.0  \n",
+       "2                         0.0                                        0.0  \n",
+       "3                         0.0                                        0.0  \n",
+       "4                         0.0                                        0.0  \n",
+       "5                         0.0                                        0.0  \n",
+       "\n",
+       "[5 rows x 9719 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_title = data.pivot_table(index='userId',columns='title',values='rating')\n",
+    "user_title = user_title.replace(np.nan, 0, regex=True)\n",
+    "user_title.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let's split into training & test:\n",
+    "# user_title.shape : 610, 9719 (userId, title)\n",
+    "nUsers = user_title.shape[0]\n",
+    "np.random.seed(0)\n",
+    "msk = np.random.rand(len(user_title)) < 0.8\n",
+    "\n",
+    "train = user_title[msk]\n",
+    "test = user_title[~msk]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to standardize our data so that the mean of observed values is 0 and the standard deviation is 1. We will do this using scikit-learn object StandardScalar. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converts to a range between 0 and 1\n",
+    "scaler = StandardScaler()\n",
+    "scaled = scaler.fit_transform(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With our standardized data, we can create a covariance matrix that represents the covariance between each feature in our data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov_matrix = np.cov(scaled)"
+   ]
   },
   {
    "cell_type": "code",
