Created an RBM Model
Added an RBM Model. Currently not scoring well I need to do more work.

--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor"
+    "from sklearn.neural_network import BernoulliRBM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
        "4                       Crime|Mystery|Thriller  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[5 rows x 9719 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,23 +441,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.45651989 0.33747738 0.97049369 ... 0.85842386 0.70012105 0.37594043]\n",
-      " [0.80332511 0.12399737 0.87146894 ... 0.67199599 0.43316907 0.92035175]\n",
-      " [0.17018718 0.01158581 0.84029349 ... 0.4624415  0.59437227 0.702918  ]\n",
-      " ...\n",
-      " [0.78927268 0.31379475 0.69660315 ... 0.58041861 0.33485922 0.49505749]\n",
-      " [0.23723699 0.92362954 0.84141442 ... 0.90547145 0.88106122 0.60924119]\n",
-      " [0.39625496 0.41739886 0.25355922 ... 0.52578672 0.77674502 0.32291808]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let's split into training & test:\n",
     "# user_title.shape : 610, 9719 (userId, title)\n",
@@ -482,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +635,7 @@
        "         1.50001496e+00,  7.20660030e-04,  2.68145467e-06]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,23 +647,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Created_Index = np.zeros(X.shape)\n",
-    "for i in range(X.shape[0]):\n",
-    "    Created_Index[::, i] = i\n",
+    "#Create Binary ratings for the movies\n",
+    "RBM_data =(user_title.to_numpy() >= 3).astype(int)\n",
     "\n",
-    "gpr = GaussianProcessRegressor().fit(X,Created_Index)"
+    "num_users,num_movies = RBM_data.shape\n",
+    "cut = int(num_users*.7)\n",
+    "Xtr = X[:cut,::]\n",
+    "Xte = X[cut:,::]\n",
+    "\n",
+    "\n",
+    "percent_masked = .3 # The percentage of data that is missing and needs to be estimated.\n",
+    "Xte_mis = np.copy(test)\n",
+    "Xte_mis[ np.random.random_sample(Xte_mis.shape)<=percent_masked ] = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "RBM = BernoulliRBM(n_components=512, learning_rate=0.1, batch_size=10, n_iter=100, verbose=0, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BernoulliRBM(n_components=512, n_iter=100, random_state=0)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RBM.fit(Xtr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-34654.027880412345\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(RBM.score_samples(Xte).mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-142475.42495828794 : 16\n",
+    "-12452.666514743332 : 32\n",
+    "-15789.723370317322 : 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RBM = BernoulliRBM(n_components=512, learning_rate=0.0001, batch_size=10, n_iter=100, verbose=0, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BernoulliRBM(learning_rate=0.0001, n_components=512, n_iter=100, random_state=0)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RBM.fit(Xtr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6146.025315525231\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(RBM.score_samples(Xte).mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-8400.401682314347: 16 .01\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RBM = BernoulliRBM(n_components=16, learning_rate=0.1, batch_size=100, n_iter=100, verbose=0, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BernoulliRBM(batch_size=100, n_components=16, n_iter=100, random_state=0)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RBM.fit(Xtr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-9651.433385652344\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(RBM.score_samples(Xte).mean())"
+   ]
   }
  ],
  "metadata": {
