Added MSE Calculation
Added MSE Calculation

--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
        "4                       Crime|Mystery|Thriller  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[5 rows x 9719 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "         1.50001496e+00,  7.20660030e-04,  2.68145467e-06]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,13 +661,13 @@
     "\n",
     "\n",
     "percent_masked = .3 # The percentage of data that is missing and needs to be estimated.\n",
-    "Xte_mis = np.copy(test)\n",
+    "Xte_mis = np.copy(Xte)\n",
     "Xte_mis[ np.random.random_sample(Xte_mis.shape)<=percent_masked ] = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "BernoulliRBM(n_components=512, n_iter=100, random_state=0)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -722,25 +722,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RBM = BernoulliRBM(n_components=512, learning_rate=0.0001, batch_size=10, n_iter=100, verbose=0, random_state=0)"
+    "RBM = BernoulliRBM(n_components=32, learning_rate=0.1, batch_size=10, n_iter=100, verbose=0, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BernoulliRBM(learning_rate=0.0001, n_components=512, n_iter=100, random_state=0)"
+       "BernoulliRBM(n_components=32, n_iter=100, random_state=0)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "BernoulliRBM(batch_size=100, n_components=16, n_iter=100, random_state=0)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -817,6 +817,44 @@
    ],
    "source": [
     "print(RBM.score_samples(Xte).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    Xte_mis_c = np.copy(Xte_mis)\n",
+    "    Xte_mis_c[Xte_mis_c<0] = 0.5\n",
+    "    for it in range(100):\n",
+    "        Xte_mis_c=RBM.gibbs(Xte_mis_c)\n",
+    "        Xte_mis_c[Xte_mis >= 0] = Xte_mis[Xte_mis >= 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8970205635500419\n",
+      "Error rate: 0.9490872139878762\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "count = 0\n",
+    "for i in range(Xte_mis_c.shape[0]):\n",
+    "    for j in range(Xte_mis_c.shape[1]):\n",
+    "        if Xte_mis_c[i,j] != Xte[i,j]:\n",
+    "            count += 1\n",
+    "print(count/(Xte_mis_c.shape[0] * Xte_mis_c.shape[1]))\n",
+    "print('Error rate:', np.mean( (Xte_mis_c!=Xte)[Xte_mis<0] ) )"
    ]
   }
  ],
